fix: border on mobile

--- a/web/app/[[...slug]]/page.module.scss
+++ b/web/app/[[...slug]]/page.module.scss
@@ -58,7 +58,5 @@
   .footer {
     left: 0;
     width: 100%;
-    border: none;
   }
-  
 }
